app/src/pages/Journey.css
#journey {
    --button-width: auto;

    display: flex;
    flex-direction: column;
    gap: var(--space-2x);
}

@media (width > 400px) {
    #journey {
        --button-width: 6em;
    }

    html[lang="en"] #journey {
        --button-width: 5em;
    }
}

#journey > * {
    margin-top: 0;
}

#journey input[type='search'] {
    /* same padding as button, to align */
    padding: var(--button-padding-y); 
}

#journey .journey-tools {
  column-gap: var(--space-1x);
  display: grid;
  grid-template-columns: 1fr var(--button-width);
}

